# twlog

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflows.yml
src/twlog/: BasicConfig.py  LogRecord.py  __init__.py  __main__.py
src/twlog/Formatters/: ANSI.py  Rich.py  __init__.py
src/twlog/Handlers/: ANSI.py  File.py  Rich.py  Stream.py  __init__.py
src/twlog/Handlers/ChatGPT/: SysLog.py
src/twlog/util/: ANSIColor.py
