[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name             = twlog
version          = 0.1.0
description      = Compatibility for Logging with Easy and Simple
author           = Twinkle Computing
author_email     = twinkle@twinkle.work
license          = GPL-3 AND RPT-1
license_file     = LICENSE, LICENSE.GPLv3, LICENSE.RPTv1
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11

[options]
zip_safe         = True
include_package_data = True
python_requires  = >=3.9
tests_require    = jupyter
install_requires = pip
setup_requires   = pip ; cython
packages         = find:

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

# [options.entry_points]
# console_scripts =
#     foo = my_package.some_module:main_func
#     bar = other_module:some_func
# gui_scripts =
#     baz = my_package_gui:start_func

# [options.packages.find]
# where   = .
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
